--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -11,6 +11,10 @@ tasks:
       - protoc -I ./protos/proto ./protos/proto/user/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
       - protoc -I ./protos/proto ./protos/proto/chat/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
       - protoc -I ./protos/proto ./protos/proto/frontend/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
+  test:
+    desc: "Run server tests"
+    cmds:
+      - go test ./server/...
   build-server:
     aliases:
       - build
