--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,11 +6,11 @@ tasks:
       - gen
     desc: "Generate proto files"
     cmds:
-      - protoc -I ./protos/proto ./protos/proto/protocol/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
-      - protoc -I ./protos/proto ./protos/proto/auth/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
-      - protoc -I ./protos/proto ./protos/proto/user/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
-      - protoc -I ./protos/proto ./protos/proto/chat/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
-      - protoc -I ./protos/proto ./protos/proto/frontend/*.proto --go_out=./protos/gen/go/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/go/ --go-grpc_opt=paths=source_relative
+      - protoc -I ./protos/proto ./protos/proto/protocol/*.proto --go_out=./protos/gen/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/ --go-grpc_opt=paths=source_relative
+      - protoc -I ./protos/proto ./protos/proto/auth/*.proto --go_out=./protos/gen/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/ --go-grpc_opt=paths=source_relative
+      - protoc -I ./protos/proto ./protos/proto/user/*.proto --go_out=./protos/gen/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/ --go-grpc_opt=paths=source_relative
+      - protoc -I ./protos/proto ./protos/proto/chat/*.proto --go_out=./protos/gen/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/ --go-grpc_opt=paths=source_relative
+      - protoc -I ./protos/proto ./protos/proto/frontend/*.proto --go_out=./protos/gen/ --go_opt=paths=source_relative --go-grpc_out=./protos/gen/ --go-grpc_opt=paths=source_relative
   test:
     desc: "Run server tests"
     cmds:
