--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   user:
     container_name: user-service
     image: user
+    build:
+      context: ..
+      dockerfile: ./deploy/apps/user/Dockerfile
     depends_on:
       - mongosetup
     networks:
@@ -10,6 +13,9 @@ services:
   auth:
     container_name: auth-service
     image: auth
+    build:
+      context: ..
+      dockerfile: ./deploy/apps/auth/Dockerfile
     depends_on:
       - mongosetup
     networks:
@@ -18,6 +24,9 @@ services:
   chat:
     container_name: chat-service
     image: chat
+    build:
+      context: ..
+      dockerfile: ./deploy/apps/chat/Dockerfile
     depends_on:
       - mongosetup
       - scylla-node1
@@ -29,6 +38,9 @@ services:
   frontend:
     container_name: frontend-service
     image: frontend
+    build:
+      context: ..
+      dockerfile: ./deploy/apps/frontend/Dockerfile
     ports:
       - 20203:20203
     depends_on:
